📝 docs: update project requirements and environment setup guide for v0.2.0

--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,5 @@ LINE_CHANNEL_ACCESS_TOKEN=your_line_channel_access_token
 LINE_USER_ID=your_line_user_id
 
 # Application
-APP_NAME=Siri-Notion
+APP_NAME=Voice-Notion
 DEBUG=false
