--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ poetry.lock
 .env.local
 
 # Data
+backend/scripts/data/
 data/
 *.wav
 *.m4a
@@ -38,3 +39,4 @@ data/
 # OS
 .DS_Store
 Thumbs.db
+.pytest_cache/
