--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,22 +1,20 @@
-[project]
+[tool.poetry]
 name = "voice-notion"
 version = "0.1.0"
 description = "Voice Notion - Voice-to-Notion Automation"
-authors = [
-    {name = "YuChieh-Chiu", email = "81817517+YuChieh-Chiu@users.noreply.github.com"}
-]
+authors = ["YuChieh-Chiu <81817517+YuChieh-Chiu@users.noreply.github.com>"]
 readme = "README.md"
-requires-python = ">=3.10,<4"
-dependencies = [
-    "fastapi (>=0.128.0,<0.129.0)", 
-    "uvicorn[standard] (>=0.40.0,<0.41.0)", 
-    "celery[redis] (>=5.6.1,<6.0.0)", 
-    "google-genai (>=1.56.0,<2.0.0)", 
-    "line-bot-sdk (>=3.21.0,<4.0.0)", 
-    "notion-client (>=2.7.0,<3.0.0)", 
-    "python-multipart (>=0.0.21,<0.0.22)", 
-    "pydantic-settings (>=2.12.0,<3.0.0)"
-]
+
+[tool.poetry.dependencies]
+python = ">=3.10,<4"
+fastapi = "^0.128.0"
+uvicorn = {extras = ["standard"], version = "^0.40.0"}
+celery = {extras = ["redis"], version = "^5.6.1"}
+google-genai = "^1.56.0"
+line-bot-sdk = "^3.21.0"
+notion-client = "^2.7.0"
+python-multipart = "^0.0.21"
+pydantic-settings = "^2.12.0"
 
 
 [build-system]
