--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ NOTION_DATABASE_ID=
 LINE_CHANNEL_ACCESS_TOKEN=your_line_channel_access_token
 LINE_USER_ID=your_line_user_id
 
+# Siri Integration
+SIRI_API_KEY=your_secret_api_key_here  # 使用 openssl rand -hex 32 生成
+
 # Application
 APP_NAME=Voice-Notion
 DEBUG=false
