--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,8 +15,8 @@ line-bot-sdk = "^3.21.0"
 notion-client = "^2.7.0"
 python-multipart = "^0.0.21"
 pydantic-settings = "^2.12.0"
-markdown-it-py = "^4.0.0"
 python-dotenv = "^1.2.1"
+mistune = "^3.2.0"
 
 
 [build-system]
