--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,8 @@ python-multipart = "^0.0.21"
 pydantic-settings = "^2.12.0"
 python-dotenv = "^1.2.1"
 mistune = "^3.2.0"
+cachetools = "^6.2.4"
+cryptography = "^46.0.3"
 
 
 [build-system]
