--- a/.env.example
+++ b/.env.example
@@ -21,4 +21,5 @@ SIRI_API_KEY=your_secret_api_key_here  # 使用 openssl rand -hex 32 生成
 # Application
 APP_NAME=Voice-Notion
 DEBUG=false
+ALLOWED_HOSTS=localhost,127.0.0.1  # 生產環境請加入您的網域，例如：localhost,127.0.0.1,yourdomain.com
 TASK_ENCRYPTION_KEY=your_task_encryption_key_here  # 用於加密 Celery 任務酬載。可用 python3 -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())" 生成
