🔒 chore(git): add personal dev notes to .gitignore
- Add AUDIO_FORMAT_VALIDATION.md to .gitignore
- Add GEMINI_EXAMPLE.py to .gitignore
- Add PROJECT_REQUIREMENTS.md to .gitignore
- Add SERVER_SECURITY_GUIDE.md to .gitignore

These files are kept locally for personal reference but not shared in the public repo.

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,9 @@ Thumbs.db
 
 # AI Development
 .ai_memory.md
+
+# Personal Development Notes (keep local only)
+docs/AUDIO_FORMAT_VALIDATION.md
+docs/GEMINI_EXAMPLE.py
+docs/PROJECT_REQUIREMENTS.md
+docs/SERVER_SECURITY_GUIDE.md
