🔧 chore: enhance security and remove hardcoded configs
- Remove Redis external port mapping to prevent unauthorized access
- Change Nginx server_name to wildcard for deployment flexibility
- Clean up outdated TODO comments in Dockerfiles and routes

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,7 +20,7 @@ http {
 
     server {
         listen 80 default_server;
-        server_name voice-notion.jacktoholiday.uk _;
+        server_name _;
 
         # Health check endpoint
         location /health {
